Cherry pick of 8be16280423eafbc3c604a81419f40a8c1681fba

--- a/AUTHORS
+++ b/AUTHORS
@@ -222,6 +222,9 @@ Samuele Pedroni
 Sankt Petersbug
 Segev Finer
 Serhii Mozghovyi
+Seth Junot
+Shantanu Jain
+Shubham Adep
 Simon Gomizelj
 Skylar Downes
 Srinivas Reddy Thatiparthy
